@@ -1,5 +1,6 @@
-<?xml version="1.0" ?>
+<!DOCTYPE authorgroup PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+          "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
 <!-- This file was exported from JabRef -->
 
-<bibliography>
+
 
